Spinner adjustments, fixed pan
Fixed the main activity spinners to return student and teacher objects on click, fixed panning issue when soft keyboard is visible on student and teacher activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
         </activity>
         <activity android:name=".listItem"> </activity>
         <activity android:name=".TeacherListActivity"
-                  android:windowSoftInputMode="stateVisible|adjustPan"></activity>
+                  android:windowSoftInputMode="stateVisible|adjustNothing"></activity>
         <activity android:name=".StudentListActivity"
-                  android:windowSoftInputMode="stateVisible|adjustPan"></activity>
+                  android:windowSoftInputMode="stateVisible|adjustNothing"></activity>
     </application>
 
 </manifest>
