--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".listItem"> </activity>
-        <activity android:name=".TeacherListActivity"
-                  android:windowSoftInputMode="stateVisible|adjustNothing"></activity>
-        <activity android:name=".StudentListActivity"
-                  android:windowSoftInputMode="stateVisible|adjustNothing"></activity>
+        <activity android:name=".listItem"></activity>
+        <activity
+            android:name=".TeacherListActivity"
+            android:windowSoftInputMode="stateVisible|adjustNothing" />
+        <activity
+            android:name=".StudentListActivity"
+            android:windowSoftInputMode="stateVisible|adjustNothing" />
+        <activity android:name=".AdminView"></activity>
     </application>
 
 </manifest>
